# fluxion

./: LICENSE  README.md  prototyping.ipynb  pyproject.toml  requirements.txt  setup.py  test.ipynb  testing.ipynb
.github/workflows/: python-package.yml  python-tests.yml
blottograd/: compgraph.py  nn.py
examples/: mnist.ipynb  test.ipynb
fluxion/: comp_graph.py  data_loader.py  dual.py  math_util.py  math_util_fast.pyx  optimize.py
gradflow/: comp_graph.py  dataloader.py  dual.py  math_util.py
jail/: computation_graph_attempt.py  prototyping.ipynb  testing.ipynb
tests/: test_comp_graph.py  test_opt.py
