[build-system]
requires = ["setuptools", "wheel", "Cython", "numpy"]
build-backend = "setuptools.build_meta"

[project]
name = "fluxion"
version = "0.0.1"
authors = [
  { name="Derek Everett", email="derekeverett@gmail.com" },
]
description = "A lightweight package for building differentiable computation graphs and machine learning."
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
  "numpy",
  "autograd",   # for unit test of gradients
  "networkx",   # for unit test of topo sort
  "Pillow",     # for loading PNG images from disk
  "ipykernel",  # for example notebooks 
  "matplotlib", # for example notebooks
  "tqdm",       # for example notebooks
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]